fix resizing on mobile, make alternate titles hidden

--- a/frontend/src/assets/scss/bt/about/_current_and_past.scss
+++ b/frontend/src/assets/scss/bt/about/_current_and_past.scss
@@ -40,6 +40,16 @@
       }
     }
 
+	.role {
+		.unserious {
+			opacity: 0;
+			&:hover {
+				opacity: 1;
+			}
+		}
+	}
+
+
     .name {
       display: flex;
       flex-direction: row;
